[package]
name = "rust-incrhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.4"
criterion = "0.3"
curve25519-dalek = "4.0.0-pre.2"
digest = "0.10.3"
rand = "0.7"
sha2 = "0.10.2"
sha3 = "0.10.1"
#tiny-keccak = { version = "2.0.2", features = ["sha3"] }

[[bench]]
name = "hash_to_curve"
harness = false
