[package]
name = "rust-incrhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
blake2 = "0.10.4"
criterion = "0.3"
curve25519-dalek = { version = "4.0.0-pre.2", features = ["serde"] }
#curve25519-dalek = "3.2.1"
digest = "0.10.3"
hex = "0.4.3"
rand = "0.7"
#serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.2"
sha3 = "0.10.1"
#tiny-keccak = { version = "2.0.2", features = ["sha3"] }

[[bench]]
name = "hash_to_curve"
harness = false

[[bench]]
name = "incr_hash"
harness = false

[[example]]
name = "main"